--- a/index.html
+++ b/index.html
@@ -9,13 +9,91 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
     <style>
       body { background: #000; color:#fff;}
+      #form {
+        position: absolute; 
+        left: 0px;
+        top: 0px;
+        width: 100%;
+        height: 100%;
+        overflow-y: scroll;
+        padding: 1em 0em;
+        color:#fff; 
+        
+        z-index: -1;
+        display:none;
+      }
+      #form .content { 
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        /* background:#84d3f8; */
+        padding: 1em;
+        border-radius: 1em;
+        height: 100%;
+        width: 80%;
+        margin:0px auto;
+      }
+      .gator { 
+        background: rgba(0, 0, 0, 0.7); 
+        padding:1em;
+        border-radius:10px;
+        text-align:center;
+      }
+
+      .gf__control__input-container {
+        margin-bottom:0.5em;
+      }
     </style>
   </head>
   <body>
 
   <div id="game"></div>
-
+  <div id="form">
+    <div class="content">
+      <div class="gator">
+        <h1>Enter the prize draw</h1>
+        <p>
+          Submit your details to receive further information about how we can support you with Microsoft Azure. You’ll also be entered into a prize draw to win a pair of Surface Earbuds.
+        </p>
+        <span data-gator-form="593"></span>
+        <div id="postform"></div>
+        <p>Competition ends 31 December 2021. T&C's | Privacy Policy</p>
+        <p><a href="#" id="score_only">No thanks, just show me my score</a></p>
+      </div>
+    </div>
+  </div>
+  
   <script type="text/javascript" src="js/vendor.bundle.js"></script>
   <script type="text/javascript" src="js/game.bundle.js"></script>
+  
+  <script src="https://cgtforms.com/greymatterlz/smartforms/547b9fa9-1a8d-4cf2-9112-f3e79bdc1cfb.js" type="text/javascript"></script>
+  <script>
+    function waitFor(checkingCallback, doneCallback) {
+    var interval = setInterval(function() {
+        if(checkingCallback()) {
+          doneCallback();
+          clearInterval(interval);
+          interval = null;
+        }
+      }, 300);
+    }
+
+    // we wait for the _gf object and the _gf.ready function to be defined
+    // before calling _gf.ready with a form id of 1
+    // make sure you change 1 to the id of your form
+    waitFor(
+      function() { return _gf && _gf.ready && _gf.ready(593) },
+      function() {
+        // example usage below
+        $('#form input:not(.gf__submit), #form select').addClass('form-control');
+        $('#form input.gf__submit').addClass('btn btn-primary');
+      }
+    );
+    $('#score_only').on('click', () => {
+      document.getElementById('form').remove();
+      window.phaserGame.scene.keys['end-scene'].doScoreReveal();
+    });
+  </script>
   </body>
 </html>
