--- a/index.html
+++ b/index.html
@@ -3,13 +3,27 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta property="og:type" content="website">
+    <meta property="og:locale" content="en_GB">
+    <meta property="og:site_name" content="Azure Cosmic Quest - Grey Matter">
+    <meta property="og:title" content="Azure Cosmic Quest - Grey Matter">
+    <meta property="og:url" content="https://greymatterltd.github.io/AzureCosmicQuest/">
+    <meta property="og:image" content="/assets/sprites/background-loading.jpg">
+    <link rel="canonical" href="https://greymatterltd.github.io/AzureCosmicQuest/">
     <title>Azure Cosmic Quest</title>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-268347-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-268347-1');
+    </script>
     <style>
       body { background: #000; color:#fff;}
-      #form {
+      #form, #share {
         position: absolute; 
         left: 0px;
         top: 0px;
@@ -22,7 +36,7 @@
         z-index: -1;
         display:none;
       }
-      #form .content { 
+      #form .content {
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -33,6 +47,22 @@
         height: 100%;
         width: 80%;
         margin:0px auto;
+      }
+      #share .content { 
+        display: flex;
+        flex-direction: column;
+        justify-content: end;
+        align-items: center;
+        /* background:#84d3f8; */
+        padding: 1em;
+        border-radius: 1em;
+        height: 100%;
+        width: 80%;
+        margin:0px auto;
+      }
+      #share a { 
+        color:#fff; 
+        text-decoration: underline;
       }
       .gator { 
         background: rgba(0, 0, 0, 0.7); 
@@ -63,6 +93,37 @@
       </div>
     </div>
   </div>
+  <div id="share">
+    <style>
+      ul.share-buttons{
+        list-style: none;
+        padding: 0;
+      }
+      ul.share-buttons li{
+        display: inline;
+      }
+      ul.share-buttons .sr-only{
+        position: absolute;
+        clip: rect(1px 1px 1px 1px);
+        clip: rect(1px, 1px, 1px, 1px);
+        padding: 0;
+        border: 0;
+        height: 1px;
+        width: 1px;
+        overflow: hidden;
+      }
+    </style>
+    <div class="content">
+      <p>Share your score!</p>
+      <ul class="share-buttons">
+        <li><a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fgreymatterltd.github.io%2FAzureCosmicQuest%2F&quote=I%20scored%20__SCORE__%20on%20the%20Azure%20Cosmic%20Quest!" title="Share on Facebook" target="_blank"><img alt="Share on Facebook" src="/assets/sharing/Facebook.png" /></a></li>
+        <li><a href="https://twitter.com/intent/tweet?source=https%3A%2F%2Fgreymatterltd.github.io%2FAzureCosmicQuest%2F&text=I%20scored%20__SCORE__%20on%20the%20Azure%20Cosmic%20Quest!:%20https%3A%2F%2Fgreymatterltd.github.io%2FAzureCosmicQuest%2F&via=GreyMatter_news" target="_blank" title="Tweet"><img alt="Tweet" src="/assets/sharing/Twitter.png" /></a></li>
+        <li><a href="http://www.linkedin.com/shareArticle?mini=true&url=https%3A%2F%2Fgreymatterltd.github.io%2FAzureCosmicQuest%2F&title=I%20scored%20__SCORE__%20on%20the%20Azure%20Cosmic%20Quest!&summary=In%20a%20galaxy%20deep%20in%20space%20a%20team%20of%20IT%20specialists%20are%20on%20a%20cosmic%20quest%20to%20find%20the%20pillars%20of%20Azure.%0AAs%20their%20pilot%2C%20your%20mission%20is%20to%20guide%20them%20safely%20through%20deep%20space%2C%20unlocking%20each%20stage%20of%20architectural%20excellence%2C%20while%20avoiding%20obstacles%20that%20could%20crash%20the%20ship%20and%20jeopardise%20the%20mission.&source=https%3A%2F%2Fgreymatterltd.github.io%2FAzureCosmicQuest%2F" target="_blank" title="Share on LinkedIn"><img alt="Share on LinkedIn" src="/assets/sharing/LinkedIn.png" /></a></li>
+        <li><a href="mailto:?subject=I%20scored%20__SCORE__%20on%20the%20Azure%20Cosmic%20Quest!&body=In%20a%20galaxy%20deep%20in%20space%20a%20team%20of%20IT%20specialists%20are%20on%20a%20cosmic%20quest%20to%20find%20the%20pillars%20of%20Azure.%0AAs%20their%20pilot%2C%20your%20mission%20is%20to%20guide%20them%20safely%20through%20deep%20space%2C%20unlocking%20each%20stage%20of%20architectural%20excellence%2C%20while%20avoiding%20obstacles%20that%20could%20crash%20the%20ship%20and%20jeopardise%20the%20mission.%20https%3A%2F%2Fgreymatterltd.github.io%2FAzureCosmicQuest%2F" target="_blank" title="Send email"><img alt="Send email" src="/assets/sharing/Email.png" /></a></li>
+      </ul>
+      <p><a href="/">Play again</a> | <a href="https://greymatter.com/corporate/about-us/contact-us/" target="_blank">Contact Grey Matter</a></p>
+    </div>
+  </div>
   
   <script type="text/javascript" src="js/vendor.bundle.js"></script>
   <script type="text/javascript" src="js/game.bundle.js"></script>
@@ -80,12 +141,10 @@
     }
 
     // we wait for the _gf object and the _gf.ready function to be defined
-    // before calling _gf.ready with a form id of 1
-    // make sure you change 1 to the id of your form
+    // before calling _gf.ready with the form id
     waitFor(
-      function() { return _gf && _gf.ready && _gf.ready(593) },
-      function() {
-        // example usage below
+      () => { return _gf && _gf.ready && _gf.ready(593) },
+      () => {
         $('#form input:not(.gf__submit), #form select').addClass('form-control');
         $('#form input.gf__submit').addClass('btn btn-primary');
       }
@@ -94,6 +153,25 @@
       document.getElementById('form').remove();
       window.phaserGame.scene.keys['end-scene'].doScoreReveal();
     });
+    window.updateScore = (score) => {
+      $('#share ul li a').each((k, elem) => { 
+        $(elem).attr('href', $(elem).attr('href').replace('__SCORE__', score));
+      });
+    }
   </script>
+  <script type="text/javascript">
+    _linkedin_partner_id = "525436";
+    window._linkedin_data_partner_ids = window._linkedin_data_partner_ids || [];
+    window._linkedin_data_partner_ids.push(_linkedin_partner_id);
+    </script><script type="text/javascript">
+    (function(l) {
+    if (!l){window.lintrk = function(a,b){window.lintrk.q.push([a,b])};
+    window.lintrk.q=[]}
+    var s = document.getElementsByTagName("script")[0];
+    var b = document.createElement("script");
+    b.type = "text/javascript";b.async = true;
+    b.src = "https://snap.licdn.com/li.lms-analytics/insight.min.js";
+    s.parentNode.insertBefore(b, s);})(window.lintrk);
+    </script>
   </body>
 </html>
