--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <meta property="og:locale" content="en_GB">
     <meta property="og:site_name" content="Azure Cosmic Quest - Grey Matter">
     <meta property="og:title" content="Azure Cosmic Quest - Grey Matter">
+    <meta property="og:description" content="In a galaxy deep in space a team of IT specialists are on a cosmic quest to find the pillars of Azure.
+    As their pilot, your mission is to guide them safely through deep space, unlocking each stage of architectural excellence, while avoiding obstacles that could crash the ship and jeopardise the mission.">
     <meta property="og:url" content="https://greymatterltd.github.io/AzureCosmicQuest/">
-    <meta property="og:image" content="assets/sprites/background-loading.jpg">
+    <meta property="og:image" content="https://greymatterltd.github.io/AzureCosmicQuest/assets/sprites/background-loading.jpg">
     <link rel="canonical" href="https://greymatterltd.github.io/AzureCosmicQuest/">
     <title>Azure Cosmic Quest</title>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
