--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1 user-scalable=no">
     <meta property="og:type" content="website">
     <meta property="og:locale" content="en_GB">
     <meta property="og:site_name" content="Azure Cosmic Quest - Grey Matter">
@@ -31,12 +31,28 @@
         top: 0px;
         width: 100%;
         height: 100%;
-        overflow-y: scroll;
         padding: 1em 0em;
         color:#fff; 
-        
         z-index: -1;
         display:none;
+        overflow-y: scroll;
+        scrollbar-width: none; /* Firefox */
+        -ms-overflow-style: none;  /* Internet Explorer 10+ */
+      }
+      #form::-webkit-scrollbar,
+      #share::-webkit-scrollbar { /* WebKit */
+          width: 0;
+          height: 0;
+      }
+      .small {
+        font-size:80% !important;
+      }
+      .small .form-control {
+        font-size:80% !important;
+        padding: .1rem .75rem;
+      }
+      .small  .gf__control__input-container {
+        margin-bottom:0.2em;
       }
       #form .content {
         display: flex;
@@ -61,6 +77,10 @@
         height: 100%;
         width: 80%;
         margin:0px auto;
+      }
+      #share.small .content,
+      #form.small .content {
+        padding: 0;
       }
       #share a { 
         color:#fff; 
@@ -160,6 +180,16 @@
         $(elem).attr('href', $(elem).attr('href').replace('__SCORE__', score));
       });
     }
+    setInterval(() => {
+      if ($('#game > div').length == 1) {
+        $('#form, #share').css('height', $('#game > div')[0].getBoundingClientRect().height + 'px');
+        if ($('#game > div')[0].getBoundingClientRect().height < 500) {
+          $('#form, #share').addClass('small');
+        } else {
+          $('#form, #share').removeClass('small');
+        }
+      }
+    }, 2000);
   </script>
   <script type="text/javascript">
     _linkedin_partner_id = "525436";
