--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
     As their pilot, your mission is to guide them safely through deep space, unlocking each stage of architectural excellence, while avoiding obstacles that could crash the ship and jeopardise the mission.">
     <meta property="og:url" content="https://greymatterltd.github.io/AzureCosmicQuest/">
     <meta property="og:image" content="https://greymatterltd.github.io/AzureCosmicQuest/assets/sprites/background-loading.jpg">
+    <meta name="author" content="Grey Matter Ltd + Switch Systems Ltd" />
+    <meta name="copyright" content="Grey Matter Ltd" />
     <link rel="canonical" href="https://greymatterltd.github.io/AzureCosmicQuest/">
     <title>Azure Cosmic Quest</title>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-268347-1"></script>
     <script>
